Tue Oct  5 22:36:05 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/radgets-standard.xml: added support for paned
	pack properties introduced in Gtk+-2.4.

	* beast-gtk/dialogs/radgets-beast.xml: use Gtk+-2.4 paned 
	pack properties for piano-roll-box.

	* beast-gtk/bstpartdialog.c (bst_part_dialog_init):
	removed paned patchup code, needed for Gtk+-2.2.

	* beast-gtk/gxk/gxkdialog.c: properly add GxkDialog to window group,
	this used to be broken in Gtk+-2.2.1.
	removed key press handling code for the Gtk+-2.2 case.

	* beast-gtk/gxk/gxkcellrendererpopup.c: removed unused Gtk+-2.2
	bug triggering code.

Tue Oct  5 21:58:32 2004  Tim Janik  <timj@gtk.org>

	* site-download.texi:
	* configure.in: 
	* README: dependency upgrade for pango and libgnomecanvas.

Tue Oct  5 19:38:39 2004  Tim Janik  <timj@gtk.org>

	* site-download.texi:
	* configure.in: 
	* README: dependency upgrade from Gtk+-2.2 to Gtk+-2.4.

Tue Oct  5 19:12:31 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkradget.[hc]: added hook:* arguments for radgets, so
	users can easily hook up custom properties without implementing new
	object types.

	* beast-gtk/gxk/gxkutils.c (fixup_gtk24_size_allocate): workaround 
	gtk_widget_size_allocate() not honouring NEED_REQUEST.

Tue Sep  5 2004  Amanpreet Singh Alam <amanpreetalam@yahoo.com>

	* configure.inB add pa(Punjabi) to ALL_LINGUAS


Mon Oct  4 23:27:29 2004  Tim Janik  <timj@gtk.org>

	* docs/site-development.texi: added link to the it translation statistics.

	* configure.in: added it to ALL_LINGUAS.

Mon Oct  4 07:15:54 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmsgabsorb.[hc]: added bst_msg_absorb_config_update()
	to update versioning. 
	bst_msg_absorb_config_adjust(): consider versioning changes.

	* beast-gtk/bstusermessage.c: update version on filtered messages.

Mon Oct  4 04:51:01 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstusermessage.c: spacing fixes.

	* beast-gtk/gxk/gxktexttools.c: don't patch up size requests when 